@@ -635,6 +635,15 @@ if test -n "$AUTH_MODULES"; then
 fi
 AC_SUBST(AUTH_MODULES)
 
+dnl Enable backtraces on fatal errors
+AC_ARG_ENABLE(stacktraces,
+[  --enable-stacktraces    Enable automatic call backtrace on fatal errors],
+[ if test "$enableval" = "yes" ; then
+    echo "Enabling automatic stack backtraces on fatal errors"
+    AC_DEFINE(PRINT_STACK_TRACE, 1)
+  fi
+])
+
 # Force some compilers to use ANSI features
 #
 case "$host" in
@@ -699,6 +708,7 @@ AC_CHECK_HEADERS( \
 	crypt.h \
 	ctype.h \
 	errno.h \
+	execinfo.h \
 	fcntl.h \
 	getopt.h \
 	gnumalloc.h \
@@ -1069,6 +1079,7 @@ fi
 dnl Check for library functions
 AC_CHECK_FUNCS(\
 	bcopy \
+	backtrace_symbols_fd \
 	crypt \
 	fchmod \
 	getdtablesize \
